--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -8,10 +8,10 @@
     }
   },
   "profiles": {
-    "model_view_controler": {
+    "blozisek_v_ostrem_c": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7051;http://localhost:5181",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
